--- a/styles/style.css
+++ b/styles/style.css
@@ -142,7 +142,9 @@ p {
 .hero-section {
   background-image: url("../images/grand_piano1original.jpg");
   background-position: center -80px;
+  background-size: auto 100%;
 }
+
 
 .hero-section::before {
   content: '';
@@ -151,7 +153,7 @@ p {
   left: 0;
   width: 100%;
   height: 100%;
-  background: radial-gradient(circle at center, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.9) 80%);
+  background: radial-gradient(circle at calc(50% + 50px) 50%, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.9) 70%);
   z-index: 1;
 }
 
@@ -457,7 +459,7 @@ p {
   color: black;
   font-family: var(--heading-font);
   padding: 12px 30px;
-  border: 2px solid transparent;
+  border: 1px solid transparent;
   display: block;
   margin: 50px auto 0;
   width: fit-content;
